/*
 * $Id: ChangeLog,v 1.6550 2009/08/19 23:19:52 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-08-20 03:27 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/rdd/wacore.c
    * Translated Walter's comments from Spanish to English. Both are not my
      native languages, so please check it.

2009-08-20 03:18 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * include/hbxml.h
  * source/rtl/hbxml.c
    ! Fixed to retrieve file handles with hb_itemGetNInt() and hb_parnint(),
      instead of long versions.
    % hb_itemRelease( hb_itemReturn() ) -> hb_itemReturnRelease()
    * isspace() -> HB_ISSPACE(). HB_ISSPACE() should be
      revised in the future if Unicode is used, but until
      then this is fine here.
    * FHANDLE -> HB_FHANDLE
    (by Viktor Szakats, borrowed from Harbour)
    * Updated to use hb_itemGetWriteCL().
    * use const char * instead of char * in places which should be marked
      as const
    * cleanup errors in strict ANSI C compilation
    (by Przemyslaw Czerpak, borrowed from Harbour)

2009-08-20 02:38 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/hbmzip/hbmzip.c
  * source/rtl/cdpapi.c
  * source/rtl/hbcomprs.c
  * source/rtl/philes.c
  * source/rtl/strpeek.c
  * include/hbapiitm.h
  * source/vm/itemapi.c
    + added new function:
         BOOL hb_itemGetWriteCL( PHB_ITEM pItem,
                                 char ** pszValue, ULONG * pulLen );
      which converts item string buffer to writable state to use with
      functions like FREAD() instead of hb_itemUnShare*()
    * updated other code to respect above modifications
  (by Przemyslaw Czerpak, borrowed from Harbour)
  * source/rtl/hbsrlraw.c
    * Updated to use hb_itemGetWriteCL().

2009-08-20 00:02 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * include/hbcompat.ch